<resources>
    <string name="app_name">LP Collection</string>
    <string name="username">joao210591</string>
    <string name="usermail">joao91@email.com</string>

    <string name="bandas">Bandas</string>
    <string name="discos">Discos</string>
    <string name="addToCollection">Minha coleção</string>
    <string name="configuracoes">Configurações</string>
    <string name="logout">Logout</string>
    <string name="minha_colecao">Minha Coleção</string>
    <string name="adicionar_a_colecao_description">Adicionar à coleção</string>
    <string name="addBand">Adicionar Banda</string>
    <string name="adicionar">Adicionar</string>
    <string name="salvar">Salvar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="selecione_a_banda">Selecione a banda</string>
    <string name="ano_de_lancamento">Ano de lançamento</string>
    <string name="disco">Disco</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancelar">Cancelar</string>
    <string name="digite_o_nome_da_banda">Digite o nome da banda</string>
    <string name="banda">Banda</string>
    <string name="digite_sua_senha">Digite sua senha</string>

</resources>