<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".discos.AdicionarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/text_view_adicionar_disco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textAlignment="center"
                android:text="@string/adicionar" />
            <TextView
                android:id="@+id/text_view_banda_disco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/selecione_a_banda"/>
            <Spinner
                android:id="@+id/spinner_banda_disco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_view_nome_disco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/disco"/>
            <EditText
                android:id="@+id/edit_text_nome_disco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                />

            <TextView
                android:id="@+id/text_view_ano_disco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ano_de_lancamento"/>
            <EditText
                android:id="@+id/edit_text_ano_disco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                />

            <Button
                android:id="@+id/button_salvar_disco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salvar" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>